# intention-engine

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: TECHNICAL_SPECIFICATION.md
examples/: manufacturing_demo.py
src/intention_engine/: __init__.py  __main__.py  chunker.py  clustering.py  coherence.py  context.py  decomposer.py  encoder.py  engine.py  events.py  hypergraph.py  ingestion.py  mcp_server.py  models.py  projection.py  rag.py  search.py  temporal.py
tests/: test_chunker.py  test_context.py  test_engine.py  test_hypergraph.py  test_ingestion.py  test_models.py  test_rag.py  test_search.py  test_temporal.py
