[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intention-engine"
version = "0.2.0"
description = "Intention-driven hypergraph engine for cross-ontology knowledge discovery"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.0",
    "faiss-cpu>=1.8",
]
mcp = [
    "mcp[cli]>=1.0",
]
gpu = [
    "faiss-gpu>=1.8",
    "torch>=2.2",
    "cupy-cuda12x>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
]

[project.scripts]
intention-engine = "intention_engine.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/intention_engine"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py311"
line-length = 100
